Fixed overlaping on lower resolution monitors

--- a/css.css
+++ b/css.css
@@ -105,7 +105,6 @@
 
 .contactInfo {
 	float: right;
-	padding-right: 70%;
 }
 
 label {
